--- a/client/main.html
+++ b/client/main.html
@@ -1,5 +1,5 @@
 <head>
-  <title>meteor251</title>
+  <title>CMP</title>
   <meta charset="utf-8">
   <script src="https://kit.fontawesome.com/fa19d2c5e9.js" crossorigin="anonymous"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
